@@ -23,12 +23,16 @@
 #include "rcfile.h"
 
 #ifdef HAVE_PAM
+# define USE_PAM 1
 pam_handle_t *pamh;
 static struct pam_conv conv = {
   misc_conv,
   NULL
 };
+#else
+# define USE_PAM 0
 #endif /* HAVE_PAM */
+int use_pam = USE_PAM;
 
 static char *pidfile;
 
@@ -352,28 +356,28 @@ change_privs (uid_t uid, gid_t gid)
 void
 anubis_changeowner (const char *user)
 {
-#ifdef HAVE_PAM
-  int pam_retval;
-#endif
   struct passwd *pwd;
 
   if (user == NULL || check_superuser () == 0)
     return;
 
 #ifdef HAVE_PAM
-  pam_retval = pam_start ("anubis", user, &conv, &pamh);
-  if (pam_retval == PAM_SUCCESS)
-    pam_retval = pam_authenticate (pamh, 0);
-  if (pam_retval == PAM_SUCCESS)
-    pam_retval = pam_acct_mgmt (pamh, 0);
-  if (pam_retval == PAM_SUCCESS)
-    pam_retval = pam_open_session (pamh, 0);
-  if (pam_retval == PAM_SUCCESS)
-    info (VERBOSE, _("PAM: Session opened (restrictions applied)."));
-  else
+  if (use_pam)
     {
-      info (NORMAL, _("PAM: Not authenticated to use GNU Anubis."));
-      quit (EXIT_FAILURE);
+      int pam_retval = pam_start ("anubis", user, &conv, &pamh);
+      if (pam_retval == PAM_SUCCESS)
+	pam_retval = pam_authenticate (pamh, 0);
+      if (pam_retval == PAM_SUCCESS)
+	pam_retval = pam_acct_mgmt (pamh, 0);
+      if (pam_retval == PAM_SUCCESS)
+	pam_retval = pam_open_session (pamh, 0);
+      if (pam_retval == PAM_SUCCESS)
+	info (VERBOSE, _("PAM: Session opened (restrictions applied)."));
+      else
+	{
+	  info (NORMAL, _("PAM: Not authenticated to use GNU Anubis."));
+	  quit (EXIT_FAILURE);
+	}
     }
 #endif /* HAVE_PAM */
 
